[gd_scene load_steps=7 format=3 uid="uid://b8upryncqwmc6"]

[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/TriggerComponent/ReceiverComponent.gd" id="1_22d2v"]
[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/Doors/SmallDoor/SmallDoor.gd" id="1_cg50m"]
[ext_resource type="Texture2D" uid="uid://cg1ymalfuxac" path="res://Resources/Images/New Piskel.png" id="1_unqbl"]
[ext_resource type="PackedScene" uid="uid://cs8xishx48a2x" path="res://Scenes/PlatformerPlayer/Goal/GoalComponent.tscn" id="4_v4atr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0qxv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a46u8"]

[node name="SmallDoor" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_cg50m")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.694118, 0.184314, 1)
position = Vector2(2.38419e-07, 0.5)
scale = Vector2(0.625, 0.65625)
texture = ExtResource("1_unqbl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s0qxv")

[node name="ReceiverComponent" type="Node2D" parent="."]
script = ExtResource("1_22d2v")

[node name="Goal" parent="." instance=ExtResource("4_v4atr")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goal"]
shape = SubResource("RectangleShape2D_a46u8")
debug_color = Color(0.811765, 0.258824, 0.792157, 0.419608)

[connection signal="triggered" from="ReceiverComponent" to="." method="_on_receiver_component_triggered"]
[connection signal="body_entered" from="Goal" to="." method="_on_goal_body_entered"]
[connection signal="body_exited" from="Goal" to="." method="_on_goal_body_exited"]
